# ai-code-review

./: .gitignore  branches.md
ai-code-review-frontend/: package-lock.json  package.json
llm-service/: main.py  pyproject.toml
llm-service/src/analyzer/: diff_parser.py  prompts.py
llm-service/src/api/: routes.py
llm-service/src/providers/: anthropic_provider.py  base.py  factory.py  huggingface_provider.py  openai_provider.py
webhook-server/: go.mod  go.sum  main.go
webhook-server/internal/config/: config.go
