[project]
name = "llm-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.28.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "huggingface-hub==0.23.2",
    "openai==1.30.1",
    "pydantic==2.7.1",
    "pygments==2.18.0",
    "python-dotenv==1.0.1",
    "tree-sitter==0.22.3",
    "uvicorn[standard]==0.29.0",
]

[dependency-groups]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
]
